2012-08-20  Richard Earnshaw  <rearnsha@arm.com>

	PR tree-ssa/54295
	* tree-ssa-math-opts.c (is_widening_mult_rhs_p): Delete rhs_code
	declaration and setter.

2012-08-20  Richard Earnshaw  <rearnsha@arm.com>

	PR tree-ssa/54295
	* tree-ssa-math-opts.c (widening_mult_conversion_strippable_p):
	New function.
	(is_widening_mult_rhs_p): Use it.

2013-05-15  Richard Sandiford  <rdsandiford@googlemail.com>

	PR target/57260
	* config/mips/mips.c (mips_function_ok_for_sibcall): Don't allow
	sibling calls to functions that would normally be lazily bound,
	unless $gp is call-clobbered.

2013-03-14  Jakub Jelinek  <jakub@redhat.com>

	* config/aarch64/t-aarch64-linux (MULTILIB_OSDIRNAMES): Set.

2012-06-18  Tejas Belagod  <tejas.belagod@arm.com>

	* doc/md.texi: Document int iterators.
	* read-rtl.c (ints): New iterator group.
	(find_int): Int iterator group callback.
	(apply_int_iterator): Likewise.
	(apply_iterators): Traverse int iterator table and add all the used
	iterators to list.
	(initialize_iterators): Initialize data structures and callbacks for int
	iterators.
	(read_rtx): Parse and read mappings for int iterators.
	(read_rtx_code): Record int iterator usage.

2012-06-13  Richard Sandiford  <rdsandiford@googlemail.com>

	* read-rtl.c (mapping): Remove index field.  Add current_value field.
	Define heap vectors.
	(iterator_group): Fix long line.  Remove num_builtins field and
	uses_iterator fields.  Make apply_iterator take a void * parameter.
	(iterator_use, atttribute_use): New structures.
	(iterator_traverse_data, BELLWETHER_CODE, bellwether_codes): Delete.
	(current_iterators, iterator_uses, attribute_uses): New variables.
	(uses_mode_iterator_p, uses_code_iterator_p): Delete.
	(apply_mode_iterator, apply_code_iterator): Take a void * parameter.
	(map_attr_string, apply_iterator_to_string): Remove iterator
	and value parameters.  Look through all current iterator values
	for a matching attribute.
	(mode_attr_index, apply_mode_maps): Delete.