@@ -1,3 +1,9 @@
+2012-09-07  Richard Earnshaw  <rearnsha@arm.com>
+
+	* gcc.target/arm/pr50318-1.c: Scan for smlal.
+	* gcc.target/arm/smlaltb-1.c: XFAIL test.
+	* gcc.target/arm/smlaltt-1.c: Likewise.
+
 2012-08-20  Richard Earnshaw  <rearnsha@arm.com>
 
 	PR tree-ssa/54295
